--- a/YancyWebv2/index.html
+++ b/YancyWebv2/index.html
@@ -57,7 +57,7 @@
 	        <a class="nav-link" href="casos.html">Casos de Éxito</a>
 	      </li>
 	       <li class="nav-item ">
-	        <a class="nav-link" href="#">Contacto</a>
+	        <a class="nav-link" href="contacto.html">Contacto</a>
 	      </li>
 	    </ul>
 	   
