--- a/YancyWebv2/contacto.html
+++ b/YancyWebv2/contacto.html
@@ -16,7 +16,7 @@
 		</a>
 	</div>
 
-	
+
 	<header id="inicio">
 		<div>
 			<img src="css/images/logo.png" alt="logo" class="logomain">
@@ -28,12 +28,12 @@
 				<div><img src="css/images/mensaje.png" alt="mensaje"><span class="item">comercial@mundosoft.comco</span></div>
 			</div>
 		</div>
-		
+
 	</header>
 	<!-- barra de navegacion -->
 	<div class="navmenu">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	  
+
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -46,26 +46,45 @@
 	      <li class="nav-item">
 	        <a class="nav-link" href="nuestraempresa.html">Nuestra Empresa</a>
 	      </li>
-	      
+
 	      <li class="nav-item ">
 	        <a class="nav-link" href="quasar.html">Quasar</a>
 	      </li>
 	       <li class="nav-item ">
 	        <a class="nav-link" href="truepay.html">TruePay</a>
 	      </li>
-	       <li class="nav-item active">
+	       <li class="nav-item ">
 	        <a class="nav-link" href="casos.html">Casos de Éxito</a>
 	      </li>
-	       <li class="nav-item ">
+	       <li class="nav-item  active">
 	        <a class="nav-link" href="contacto.html">Contacto</a>
 	      </li>
 	    </ul>
-	   
+
 	  </div>
 	</nav>
 	</div>
 	<!-- fin barra de navegación -->
-	
+	<div class="central tituloflecha2">
+		Contáctanos
+	</div><br>
+	<div class="textonormal central">
+		Contestaremos a la mayor brevedad posible
+	</div><br>
+	<form action="" method="post" id="contacto">
+		<fieldset>
+			<input type="text" id="nombre" name="nombre" placeholder="Nombre">
+			<input type="text" id="cargo" name="cargo" placeholder="Cargo">
+			<input type="text" id="empresa" name="empresa" placeholder="Empresa">
+			<input type="text" id="telefono" name="telefono" placeholder="Teléfono">
+			<input type="text" id="email" name="email" placeholder="Email">
+			<input type="text" id="ciudad" name="ciudad" placeholder="Ciudad">
+			<input type="text" id="pais" name="pais" placeholder="país">
+			<textarea id="comentario" name="comentario" placeholder="Comentario"></textarea>
+			<input type="submit" id="enviar" name="enviar" value="enviar">
+		</fieldset>
+
+	</form>
 
 	<footer>
 		<img src="css/images/logosimbolo.png" alt="logo">
@@ -78,10 +97,10 @@
 				<div><span class="item">comercial@mundosoft.comco</span><img src="css/images/mensaje.png" alt="mensaje"></div>
 			</div>
 		</div>
-		
+
 	</footer>
 	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/bootstrap.bundle.js"></script>	
+	<script src="js/bootstrap.bundle.js"></script>
 	<script>
 		$('a[href^="#"]').on('click', function(event) {
 
@@ -97,7 +116,7 @@
 	});
 	</script>
 
-	
+
 
 </body>
 </html>
