--- a/YancyWebv2/quasar.html
+++ b/YancyWebv2/quasar.html
@@ -4,7 +4,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
-	<title>Mundo SOFT</title>
+	<title>MundoSoft</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/estilos.css">
 	<link rel="stylesheet" href="css/animations.css">
@@ -19,8 +19,8 @@
 	</div>
 
 	<header id="inicio">
-		<div>
-			<img src="css/images/logo.png" alt="logo" class="logomain">
+		<div class="iniciop1">
+			<img  src="css/images/logo.png" alt="logo" class="logomain">
 		</div>
 		<div>
 			<div class="milista">
@@ -29,12 +29,12 @@
 				<div><img src="css/images/mensaje.png" alt="mensaje"><span class="item">comercial@mundosoft.comco</span></div>
 			</div>
 		</div>
-		
+
 	</header>
 	<!-- barra de navegacion -->
 	<div class="navmenu">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	  
+
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -47,7 +47,7 @@
 	      <li class="nav-item">
 	        <a class="nav-link" href="nuestraempresa.html">Nuestra Empresa</a>
 	      </li>
-	      
+
 	      <li class="nav-item active">
 	        <a class="nav-link" href="quasar.html">Quasar</a>
 	      </li>
@@ -61,7 +61,7 @@
 	        <a class="nav-link" href="contacto.html">Contacto</a>
 	      </li>
 	    </ul>
-	   
+
 	  </div>
 	</nav>
 	</div>
@@ -129,16 +129,16 @@
 				<li>
 					Permite crear documentos plantillas para <br>
 					legalizaciones, tales como, pagares, prendas de <br>
-					vehículos, cartas de bienvenidas, etc 
+					vehículos, cartas de bienvenidas, etc
 				</li>
 				<li>
-					Permite realizar referenciación de información. 
+					Permite realizar referenciación de información.
 				</li>
 				<li>
 					Cuenta con un Portal Web, mediante el cual los <br>
 					clientes pueden tener acceso a diferentes <br>
 					opciones del sistemas, tales como; Estados de <br>
-					Cuenta, PSE, Volantes de Pago, etc… 
+					Cuenta, PSE, Volantes de Pago, etc…
 				</li>
 				<li>Consultar online con Datacrédito, por medio <br>
 				de Web Services.</li>
@@ -152,21 +152,21 @@
 			</div>
 			<ul class="soluciones">
 				<li>
-					Permite parametrizar las prioridades de pagos por <br>	
+					Permite parametrizar las prioridades de pagos por <br>
 					conceptos. Ejemplo: Primero Mora, luego seguros, <br>
-					intereses corrientes y capital 
+					intereses corrientes y capital
 				</li>
 				<li>Carga de pagos por medio de archivos plano de los <br>
-					bancos. 
+					bancos.
 				</li>
 				<li>
 					Se pueden fraccionar pagos realizados en las <br>
-					instituciones bancarias para diferentes créditos. 
+					instituciones bancarias para diferentes créditos.
 				</li>
 				<li>
 					Permite realizar aplicaciones de pagos mediante una <br>
 					orden administrativa que ingrese el acuerdo con el <br>
-					cliente en una negociación de cobranzas. 
+					cliente en una negociación de cobranzas.
 				</li>
 				<li>
 					Admite realizar diferentes novedades en el crédito, <br>
@@ -229,22 +229,59 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<footer>
-		<img src="css/images/logosimbolo.png" alt="logo">
-		<div>
-			<div class="ftitulogra">Tienes alguna consulta</div>
-			<div class="tituloflecha2">Contáctanos</div>
-			<div class="milista">
-				<div><span class="item">384 44 99</span><img src="css/images/celular.png" alt="celular foto"></div>
-				<div>300 620 80 80<img src="css/images/contacto.png" alt="contacto"><span class="item"></span></div>
-				<div><span class="item">comercial@mundosoft.comco</span><img src="css/images/mensaje.png" alt="mensaje"></div>
+		<div class="contepie">
+			<img src="css/images/logosimbolo.png" alt="logo">
+			<div>
+				<div class="ftitulogra">¿Tienes alguna consulta?</div>
+				<div class="tituloflecha2">Contáctanos</div>
+				<div class="milista">
+					<div><span class="item">384 44 99</span><img src="css/images/celular.png" alt="celular foto"></div>
+					<div>300 620 80 80<img src="css/images/contacto.png" alt="contacto"><span class="item"></span></div>
+					<div><span class="item">comercial@mundosoft.comco</span><img src="css/images/mensaje.png" alt="mensaje"></div>
+				</div>
 			</div>
 		</div>
-		
+		<!-- barra de navegacion -->
+		<div class="navmenu">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active">
+						<a class="nav-link " href="#">Inicio <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="nuestraempresa.html">Nuestra Empresa</a>
+					</li>
+
+					<li class="nav-item ">
+						<a class="nav-link" href="quasar.html">Quasar</a>
+					</li>
+					 <li class="nav-item ">
+						<a class="nav-link" href="truepay.html">TruePay</a>
+					</li>
+					 <li class="nav-item ">
+						<a class="nav-link" href="casos.html">Casos de Éxito</a>
+					</li>
+					 <li class="nav-item ">
+						<a class="nav-link" href="contacto.html">Contacto</a>
+					</li>
+				</ul>
+
+			</div>
+		</nav>
+		</div>
+		<!-- fin barra de navegación -->
+
 	</footer>
 	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/bootstrap.bundle.js"></script>	
+	<script src="js/bootstrap.bundle.js"></script>
 	<script src="js/css3-animate-it.js"></script>
 	<script>
 		$('a[href^="#"]').on('click', function(event) {
@@ -261,7 +298,7 @@
 	});
 	</script>
 
-	
+
 
 </body>
 </html>
