--- a/YancyWebv2/contacto.html
+++ b/YancyWebv2/contacto.html
@@ -4,7 +4,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
-	<title>Mundo SOFT</title>
+	<title>MundoSoft</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/estilos.css">
 </head>
@@ -18,8 +18,8 @@
 
 
 	<header id="inicio">
-		<div>
-			<img src="css/images/logo.png" alt="logo" class="logomain">
+		<div class="iniciop1">
+			<img  src="css/images/logo.png" alt="logo" class="logomain">
 		</div>
 		<div>
 			<div class="milista">
@@ -87,16 +87,53 @@
 	</form>
 
 	<footer>
-		<img src="css/images/logosimbolo.png" alt="logo">
-		<div>
-			<div class="ftitulogra">Tienes alguna consulta</div>
-			<div class="tituloflecha2">Contáctanos</div>
-			<div class="milista">
-				<div><span class="item">384 44 99</span><img src="css/images/celular.png" alt="celular foto"></div>
-				<div>300 620 80 80<img src="css/images/contacto.png" alt="contacto"><span class="item"></span></div>
-				<div><span class="item">comercial@mundosoft.comco</span><img src="css/images/mensaje.png" alt="mensaje"></div>
+		<div class="contepie">
+			<img src="css/images/logosimbolo.png" alt="logo">
+			<div>
+				<div class="ftitulogra">¿Tienes alguna consulta?</div>
+				<div class="tituloflecha2">Contáctanos</div>
+				<div class="milista">
+					<div><span class="item">384 44 99</span><img src="css/images/celular.png" alt="celular foto"></div>
+					<div>300 620 80 80<img src="css/images/contacto.png" alt="contacto"><span class="item"></span></div>
+					<div><span class="item">comercial@mundosoft.comco</span><img src="css/images/mensaje.png" alt="mensaje"></div>
+				</div>
 			</div>
 		</div>
+		<!-- barra de navegacion -->
+		<div class="navmenu">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active">
+						<a class="nav-link " href="#">Inicio <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="nuestraempresa.html">Nuestra Empresa</a>
+					</li>
+
+					<li class="nav-item ">
+						<a class="nav-link" href="quasar.html">Quasar</a>
+					</li>
+					 <li class="nav-item ">
+						<a class="nav-link" href="truepay.html">TruePay</a>
+					</li>
+					 <li class="nav-item ">
+						<a class="nav-link" href="casos.html">Casos de Éxito</a>
+					</li>
+					 <li class="nav-item ">
+						<a class="nav-link" href="contacto.html">Contacto</a>
+					</li>
+				</ul>
+
+			</div>
+		</nav>
+		</div>
+		<!-- fin barra de navegación -->
 
 	</footer>
 	<script src="js/jquery-3.2.1.min.js"></script>
