--- a/YancyWebv2/casos.html
+++ b/YancyWebv2/casos.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 	<title>MundoSoft</title>
+	<link rel="icon" href="css/favicon.ico" type="image/x-icon" />
+	<link rel="icon" href="css/favicon.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/estilos.css">
 </head>
@@ -19,7 +21,9 @@
 
 	<header id="inicio">
 		<div class="iniciop1">
+			<a href="index.html">
 			<img  src="css/images/logo.png" alt="logo" class="logomain">
+		</a>
 		</div>
 		<div>
 			<div class="milista">
@@ -71,13 +75,19 @@
 
 
 	<div id="casos">
+		<div class="tituloflecha2 central">
+			Empresas que han agilizado sus procesos
+		</div>
+		<div class="ftitulogra central estilo">
+			<h2>Estos son algunos de nuestros clientes</h2>
+		</div>
 		<div class="tituloflecha4">
 				Financieros
 		</div>
 		<div class="galeria">
-			<div><img src="css/images/casos/f1.png" alt="casos"></div>
-			<div><img src="css/images/casos/f2.png" alt="casos"></div>
-			<div><img src="css/images/casos/f3.png" alt="casos"></div>
+			<div class="bordeiz"><a target="_blank" href="https://www.girosyfinanzas.com/wps/portal/girosyfinanzas"><img src="css/images/casos/f1.png" alt="casos"></a></div>
+			<div class="bordeiz"><a target="_blank" href="https://www.girosyfinanzas.com/wps/portal/girosyfinanzas"><img src="css/images/casos/f2.png" alt="casos"></a></div>
+			<div class="bordeiz"><a target="_blank" href="https://www.girosyfinanzas.com/wps/portal/girosyfinanzas"><img src="css/images/casos/f3.png" alt="casos"></a></div>
 
 
 		</div>
@@ -85,43 +95,65 @@
 				Financiamiento
 		</div>
 		<div class="galeria">
-			<div><img src="css/images/casos/f4.png" alt="casos"></div>
-			<div><img src="css/images/casos/f5.png" alt="casos"></div>
-			<div><img src="css/images/casos/f6.png" alt="casos"></div>
-			<div><img src="css/images/casos/f7.png" alt="casos"></div>
-
-		</div>
-		<div class="galeria">
-			<div>
-				<div class="tituloflecha4">Turismo</div>
-				<img src="css/images/casos/f8.png" alt="casos"></div>
-			<div class="bordeiz">
-				<div class="tituloflecha4">Educativo</div>
-				<img src="css/images/casos/f9.png" alt="casos">
-			</div>
-			<div class="bordeiz">
-				<div class="tituloflecha4">Afianzador</div>
-				<img src="css/images/casos/f10.png" alt="casos">
-			</div>
-
-		</div>
-		<div class="tituloflecha4">
-				Salud
-		</div>
-		<div class="galeria">
-			<div><img src="css/images/casos/f11.png" alt="casos"></div>
-			<div><img src="css/images/casos/f12.png" alt="casos"></div>
+			<div class="bordeiz"><a target="_blank" href="https://www.girosyfinanzas.com/wps/portal/girosyfinanzas"><img src="css/images/casos/f4.png" alt="casos"></a></div>
+			<div class="bordeiz"><a target="_blank" href="https://www.girosyfinanzas.com/wps/portal/girosyfinanzas"><img src="css/images/casos/f5.png" alt="casos"></a></div>
+			<div class="bordeiz"><a target="_blank" href="https://www.girosyfinanzas.com/wps/portal/girosyfinanzas"><img src="css/images/casos/f6.png" alt="casos"></a></div>
+			<div class="bordeiz"><a target="_blank" href="https://www.girosyfinanzas.com/wps/portal/girosyfinanzas"><img src="css/images/casos/f7.png" alt="casos"></a></div>
 
 		</div>
 		<div class="tituloflecha4">
 				Casa Cobranza
 		</div>
 		<div class="galeria">
-			<div><img src="css/images/casos/f13.png" alt="casos"></div>
-			<div><img src="css/images/casos/f14.png" alt="casos"></div>
-			<div><img src="css/images/casos/f15.png" alt="casos"></div>
-			<div><img src="css/images/casos/f16.png" alt="casos"></div>
+			<div class="bordeiz"><a target="_blank" href="https://www.girosyfinanzas.com/wps/portal/girosyfinanzas"><img src="css/images/casos/f13.png" alt="casos"></a></div>
+			<div class="bordeiz"><a target="_blank" href="https://www.girosyfinanzas.com/wps/portal/girosyfinanzas"><img src="css/images/casos/f14.png" alt="casos"></a></div>
+			<div class="bordeiz"><a target="_blank" href="https://www.girosyfinanzas.com/wps/portal/girosyfinanzas"><img src="css/images/casos/f15.png" alt="casos"></a></div>
+			<div class="bordeiz"><a target="_blank" href="https://www.girosyfinanzas.com/wps/portal/girosyfinanzas"><img src="css/images/casos/f16.png" alt="casos"></a></div>
 		</div>
+		<div class="galeria">
+			<div>
+				<div class="tituloflecha4">Turismo</div>
+				<a target="_blank" href="https://www.girosyfinanzas.com/wps/portal/girosyfinanzas">
+				<img src="css/images/casos/f8.png" alt="casos">
+			</a>
+			</div>
+
+
+
+
+
+
+
+		</div>
+
+		<div class="galeria">
+			<div>
+				<div class="tituloflecha4">Educativo</div>
+				<a target="_blank" href="https://www.girosyfinanzas.com/wps/portal/girosyfinanzas">
+				<img src="css/images/casos/f9.png" alt="casos">
+			</a>
+			</div>
+		</div>
+		<div class="galeria">
+			<div>
+
+						<div class="tituloflecha4">Afianzador</div>
+						<img src="css/images/casos/f10.png" alt="casos">
+			</div>
+		</div>
+
+
+
+
+		<div class="tituloflecha4">
+				Salud
+		</div>
+		<div class="galeria">
+			<div class="bordeiz"><a target="_blank" href="https://www.girosyfinanzas.com/wps/portal/girosyfinanzas"><img src="css/images/casos/f11.png" alt="casos"></a></div>
+			<div class="bordeiz"><a target="_blank" href="https://www.girosyfinanzas.com/wps/portal/girosyfinanzas"><img src="css/images/casos/f12.png" alt="casos"></a></div>
+
+		</div>
+
 	</div>
 
 
@@ -148,7 +180,7 @@
 
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
+					<li class="nav-item">
 						<a class="nav-link " href="#">Inicio <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
@@ -161,7 +193,7 @@
 					 <li class="nav-item ">
 						<a class="nav-link" href="truepay.html">TruePay</a>
 					</li>
-					 <li class="nav-item ">
+					 <li class="nav-item active ">
 						<a class="nav-link" href="casos.html">Casos de Éxito</a>
 					</li>
 					 <li class="nav-item ">
