--- a/YancyWebv2/nuestraempresa.html
+++ b/YancyWebv2/nuestraempresa.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 	<title>MundoSoft</title>
+	<link rel="icon" href="css/favicon.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/estilos.css">
 	<link rel="stylesheet" href="css/animations.css">
@@ -19,7 +20,9 @@
 
 	<header id="inicio">
 		<div class="iniciop1">
+			<a href="index.html">
 			<img  src="css/images/logo.png" alt="logo" class="logomain">
+		</a>
 		</div>
 		<div>
 			<div class="milista">
@@ -123,7 +126,7 @@
 
 							<div class="titulope">
 								<span class="animatedParent">
-								<img class='animated bounceInDown' data-id='6' src="css/images/fleabajoicon.png" alt="foto flecha abajo">
+								<img class='animated bounceInDown' data-id='6' src="css/images/flecha.png" alt="foto flecha abajo">
 							</span>
 								CREAMOS SOLUCIONES QUE <br>
 								AGILIZAN LA COBRANZA DE CARTERA <br>
@@ -153,14 +156,14 @@
 					</div>
 				</div>
 			</div>
-
-		<div class="contenedor">
-			<div class="titulope">
-				<i>¿Por Qué escoger a Mundosoft como proveedor?</i>
+ <br><br>
+		<div class="contenido">
+			<div class="titulope cental">
+				<i><h2>¿Por Qué escoger a Mundosoft como proveedor?</h2></i>
 				<ul class="soluciones">
 
 			</div>
-
+					<ul class="menugenerico">
 					<li>Experiencia en las necesidades de nuestros clientes.</li>
 					<li>Soluciones concretas a la medida de los requerimientos de la empresa.</li>
 					<li>
@@ -194,10 +197,10 @@ Contamos con una Plataforma tecnológica de punta que permite la interacción co
 
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav mr-auto">
-						<li class="nav-item active">
+						<li class="nav-item">
 							<a class="nav-link " href="#">Inicio <span class="sr-only">(current)</span></a>
 						</li>
-						<li class="nav-item">
+						<li class="nav-item active">
 							<a class="nav-link" href="nuestraempresa.html">Nuestra Empresa</a>
 						</li>
 
