--- a/YancyWebv2/quasar.html
+++ b/YancyWebv2/quasar.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 	<title>MundoSoft</title>
+	<link rel="icon" href="css/favicon.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/estilos.css">
 	<link rel="stylesheet" href="css/animations.css">
@@ -20,7 +21,9 @@
 
 	<header id="inicio">
 		<div class="iniciop1">
+			<a href="index.html">
 			<img  src="css/images/logo.png" alt="logo" class="logomain">
+			</a>
 		</div>
 		<div>
 			<div class="milista">
@@ -72,15 +75,15 @@
 		<div class="animatedParent">
 			<img class='animated growIn slower' data-id='1' src="css/images/quasar negweb.png" alt="logo quasar">
 		</div>
-		<div class="animatedParent">
-			<img class='animated bounceInDown slower' data-id='2' src="css/images/quasarweb.png" alt="foto quasar web">
+		<div >
+			<img  src="css/images/quasarweb.png" alt="foto quasar web">
 		</div>
 	</div>
 	<div class="contenedor6">
 		<div class="animatedParent">
 			<img class='animated bounceIn slower' data-id='3'  src="css/images/quasarportatil.png" alt="foto quasar portatil">
 		</div>
-		<div>
+		<div class="central">
 			Es un <strong>sistema modular</strong> que se encarga de <br>
 			controlar y administrar las diferentes líneas de <br>
 			crédito que tiene una compañía.<br> <br>
@@ -117,12 +120,12 @@
 				por la referenciación, aprobación y legalización. <br>
 			</div>
 		</div>
-		<div>
+		<div class="central">
 			<div class="tituloflecha2">
 				Beneficios
 				</div>
 			<ul class="soluciones">
-				<li>Administración por WorkFlow</li>
+				<li>Administración por WorkFlow <br> <br></li>
 				<li>Creación de varias rutas, en las cuales podemos dar <br>
 					permisos a quien ejecuta el paso, quien controla,<br>
 					que archivos se deben adjuntar en cada paso. </li>
@@ -132,7 +135,7 @@
 					vehículos, cartas de bienvenidas, etc
 				</li>
 				<li>
-					Permite realizar referenciación de información.
+					Permite realizar referenciación de información. <br> <br>
 				</li>
 				<li>
 					Cuenta con un Portal Web, mediante el cual los <br>
@@ -145,9 +148,10 @@
 			</ul>
 		</div>
 	</div>
+
 	<div class="contenedor8">
 		<div>
-			<div class="tituloflecha2">
+			<div class="tituloflecha2 central">
 				Beneficios
 			</div>
 			<ul class="soluciones">
@@ -174,15 +178,15 @@
 					Notas Créditos, Anulaciones, Cambio de deudor, <br>
 					Cambio fecha de pago.
 				</li>
-				<li>Reporte a las centrales de riesgos, Datacredito y Cifin</li>
+				<li>Reporte a las centrales de riesgos, Datacredito y Cifin<br><br></li>
 				<li>
-					Administración de cartera castigada.
+					Administración de cartera castigada.<br><br>
 				</li>
 				<li>
-					Contabilización de las transacciones de cartera.
+					Contabilización de las transacciones de cartera.<br><br>
 				</li>
 				<li>
-					Modelo Referencia MRC y MRCO.
+					Modelo Referencia MRC y MRCO.<br><br>
 				</li>
 			</ul>
 		</div>
@@ -207,30 +211,32 @@
 		</div>
 		</div>
 	</div>
-	<div class="contenedor9">
+	<div class="contenedor9" >
 		<div>
 			<div class="tituloflecha2">
 				<strong>Otras Funcionalidades</strong>
 			</div>
 			<div class="c9conte">
-				<div>
+
+				<div class="estilo">
 					También contamos con un módulo de cheques <br>
 					que permite la impresión de las órdenes de<br>
 					pagos de los desembolsos o de cualquier<br>
 					egreso de la empresa. Incluye todos los<br>
 					soportes y manejo de contabilización.<br>
 				</div>
-				<div>
+				<div class="estilo">
 					Quasar cuenta con un módulo de facturación, <br>
 					en donde podemos crear facturas con su<br>
 					respectivas contabilizaciones y deducciones de<br>
 					acuerdo a la legislación de la DIAN.<br>
 				</div>
+
 			</div>
 		</div>
 	</div>
 
-	<footer>
+	<footer id="pieq">
 		<div class="contepie">
 			<img src="css/images/logosimbolo.png" alt="logo">
 			<div>
@@ -253,14 +259,14 @@
 
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
+					<li class="nav-item">
 						<a class="nav-link " href="#">Inicio <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="nuestraempresa.html">Nuestra Empresa</a>
 					</li>
 
-					<li class="nav-item ">
+					<li class="nav-item active">
 						<a class="nav-link" href="quasar.html">Quasar</a>
 					</li>
 					 <li class="nav-item ">
