--- a/YancyWebv2/truepay.html
+++ b/YancyWebv2/truepay.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 	<title>MundoSoft</title>
+	<link rel="icon" href="css/favicon.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/estilos.css">
 	<link rel="stylesheet" href="css/animations.css">
@@ -20,7 +21,9 @@
 
 	<header id="inicio">
 		<div class="iniciop1">
+			<a href="index.html">
 			<img  src="css/images/logo.png" alt="logo" class="logomain">
+		</a>
 		</div>
 		<div>
 			<div class="milista">
@@ -31,7 +34,9 @@
 		</div>
 
 	</header>
+
 	<!-- barra de navegacion -->
+
 	<div class="navmenu">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 
@@ -65,6 +70,7 @@
 	  </div>
 	</nav>
 	</div>
+
 	<!-- fin barra de navegación -->
 
 
@@ -73,20 +79,24 @@
 		<div class="animatedParent">
 			<img class='animated growIn slower' data-id='1' src="css/images/truepay negweb.png" alt="logo">
 		</div>
-		<div class="animatedParent">
-			<img class='animated bounceInDown slower' data-id='2' src="css/images/truepayweb.png" alt="pantallo true ">
+		<div>
+			<img src="css/images/truepayweb.png" alt="pantallo true ">
 		</div>
 	</div>
+
+
 	<div class="contenedor10">
 		<div class="animatedParent">
 			<img class='animated bounceIn slower' data-id='3' src="css/images/truepaylupa.png" alt=" foto truepay">
 		</div>
-		<div>
-			Es un <strong>sistema</strong> modular que se encarga de controlar y <br>
-			administrar las gestiones de cobro que la empresa realiza a <br>
-			sus deudores.  <br> <br>
-			Con <strong>TruePay</strong> podemos verificar:
-			<ul class="menugenerico">
+		<div >
+			<div class="central">
+				Es un <strong>sistema</strong> modular que se encarga de controlar y <br>
+				administrar las gestiones de cobro que la empresa realiza a <br>
+				sus deudores.  <br> <br>
+				Con <strong>TruePay</strong> podemos verificar: <br> <br>
+			</div>
+			<ul class="menugenerico central">
 				<li>Desempeño de los gestores.</li>
 				<li>Evolución de la cartera.</li>
 				<li>Revisión de políticas de cobro.</li>
@@ -112,7 +122,7 @@
 				respectivos gestiones <br>
 			</div>
 		</div>
-		<div>
+		<div class="central">
 			<div class="tituloflecha2">
 				Beneficios
 				</div>
@@ -156,8 +166,8 @@
 		</div>
 	</div>
 	<div class="contenedor12">
-		<div>
-			<div class="tituloflecha2">
+		<div class="central">
+			<div class="tituloflecha2 central">
 				Beneficios
 			</div>
 			<ul class="solucionestrue">
@@ -239,8 +249,8 @@
 			<ul class="solucionestrue">
 				<li>Se pueden programar y controlar los cumplimientos <br>
 					de los acuerdos de pagos que realicen los deudores</li>
-				<li>TruePay puede conectarse a centrales telefónica Voz IP,
-					tal como Asterix</li>
+				<li>TruePay puede conectarse a centrales telefónica Voz IP, <br>
+					tal como Asterix <br><br></li>
 				<li>
 					Se pueden manejar todas las etapas procesales de un <br>
 					Proceso Ejecutivo, Verbal y/o de Conciliación.
@@ -253,80 +263,24 @@
 					Todas las gestiones que se realicen, ya sea de los gestores <br>
 					y/o abogados pueden ser visualizadas en forma conjunta, <br>
 					de esta manera se puede revisar el perfil del cliente. <br>
-				</li>
-				<li>
+
 					Entre otra información podemos verificar los <br>
-					siguientes datos: <br> <br>
+					siguientes datos: <br>
 					<ul>
 						 <li>Datos de la cartera objeto de cobro. </li>
-						 <li>Garantías del titular. </li>
-						 <li>Codeudores.</li>
+						 <li>Garantías del titular, codeudores </li>
+						 <!-- <li>Codeudores.</li> -->
 						 <li>Detalle de pagos.</li>
 						 <li>Detalles financieros (Tasa, Plazo, saldo, etc..) </li>
 						 <li>Hábitos de pagos.</li>
-						 <li>Bienes embargables</li>
+						 <li>Bienes embargables </li>
 					 </ul>
 				</li>
 			</ul>
 		</div>
 	</div>
-	<!--
-	<div id="casos">
-		<div class="tituloflecha3">
-				Financieros
-		</div>
-		<div class="galeria">
-			<div><img src="css/images/casos/f1.png" alt="casos"></div>
-			<div><img src="css/images/casos/f2.png" alt="casos"></div>
-			<div><img src="css/images/casos/f3.png" alt="casos"></div>
 
-
-		</div>
-		<div class="tituloflecha3">
-				Financiamiento
-		</div>
-		<div class="galeria">
-			<div><img src="css/images/casos/f4.png" alt="casos"></div>
-			<div><img src="css/images/casos/f5.png" alt="casos"></div>
-			<div><img src="css/images/casos/f6.png" alt="casos"></div>
-			<div><img src="css/images/casos/f7.png" alt="casos"></div>
-
-		</div>
-		<div class="galeria">
-			<div>
-				<div class="tituloflecha3">Turismo</div>
-				<img src="css/images/casos/f8.png" alt="casos"></div>
-			<div>
-				<div class="tituloflecha3">Educativo</div>
-				<img src="css/images/casos/f9.png" alt="casos">
-			</div>
-			<div>
-				<div class="tituloflecha3">Afianzador</div>
-				<img src="css/images/casos/f10.png" alt="casos">
-			</div>
-
-		</div>
-		<div class="tituloflecha3">
-				Salud
-		</div>
-		<div class="galeria">
-			<div><img src="css/images/casos/f11.png" alt="casos"></div>
-			<div><img src="css/images/casos/f12.png" alt="casos"></div>
-
-		</div>
-		<div class="tituloflecha3">
-				Casa Cobranza
-		</div>
-		<div class="galeria">
-			<div><img src="css/images/casos/f13.png" alt="casos"></div>
-			<div><img src="css/images/casos/f14.png" alt="casos"></div>
-			<div><img src="css/images/casos/f15.png" alt="casos"></div>
-			<div><img src="css/images/casos/f16.png" alt="casos"></div>
-		</div>
-	</div>
-	-->
-
-	<footer>
+	<footer id="pieq">
 		<div class="contepie">
 			<img src="css/images/logosimbolo.png" alt="logo">
 			<div>
@@ -340,6 +294,7 @@
 			</div>
 		</div>
 		<!-- barra de navegacion -->
+
 		<div class="navmenu">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 
@@ -349,7 +304,7 @@
 
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
+					<li class="nav-item ">
 						<a class="nav-link " href="#">Inicio <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
@@ -359,7 +314,7 @@
 					<li class="nav-item ">
 						<a class="nav-link" href="quasar.html">Quasar</a>
 					</li>
-					 <li class="nav-item ">
+					 <li class="nav-item active ">
 						<a class="nav-link" href="truepay.html">TruePay</a>
 					</li>
 					 <li class="nav-item ">
@@ -373,9 +328,11 @@
 			</div>
 		</nav>
 		</div>
+
 		<!-- fin barra de navegación -->
 
 	</footer>
+
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.bundle.js"></script>
 	<script src="js/css3-animate-it.js"></script>
