--- a/YancyWebv2/index.html
+++ b/YancyWebv2/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 	<title>MundoSoft</title>
+
+	<link rel="icon" href="css/favicon.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/animations.css">
 	<link rel="stylesheet" href="css/estilos.css">
@@ -19,7 +21,9 @@
 
 	<header id="inicio">
 		<div class="iniciop1">
+			<a href="index.html">
 			<img  src="css/images/logo.png" alt="logo" class="logomain">
+		</a>
 		</div>
 		<div>
 			<div class="milista">
@@ -66,6 +70,7 @@
 	</div>
 	<!-- fin barra de navegación -->
 	<!-- imagen primera parte -->
+
 	<div class="contenedor1">
 		<div class="titulo">
 			<strong>Soluciones inteligentes</strong><br>
@@ -77,6 +82,7 @@
 			<img class='animated growIn slower'  data-id='1' src="css/images/pantalla.png" alt="">
 		</div>
 	</div>
+
 	<div class="contenedor2">
 		<div class="animatedParent">
 			<a href="quasar.html">
@@ -86,10 +92,11 @@
 				Es un sistema modular que se encarga de<br>
 				controlar y administrar las diferentes <br>líneas de crédito que tiene una compañía. <br><br>
 				</strong> <br>
-				<a href="#" class="enlace">Conoce más</a>
+				<a href="quasar.html" class="enlace">Conoce más</a>
 					<br> <br>
 			</div>
 		</div>
+		<div class="barra"></div>
 		<div class="animatedParent">
 			<a href="truepay.html">
 			<img class='animated bounceIn'  data-id='3'  src="css/images/truepay.png" alt="Foto True">
@@ -99,14 +106,14 @@
 				Es un sistema modular que se encarga de<br>
 				controlar y administrar las gestiones de <br>cobro que la empresa realiza a sus deudores. <br><br>
 				</strong> <br>
-				<a href="#" class="enlace">Conoce más</a> <br> <br>
+				<a href="truepay.html" class="enlace">Conoce más</a> <br> <br>
 			</div>
 		</div>
 	</div>
 	<div class="conte">
 	<div class="tituloflecha2">
 		<div class="central">
-		 ¿Por qué escoger los productos de Mundosoft
+		 ¿Por qué escoger los productos de Mundosoft?
 		 </div>
 	 </div>
 	 <ul class="menugenerico">
@@ -115,7 +122,9 @@
 		 <li>Plataforma sólida y robusta logrando que nuestros clientes sea más eficientes en sus operaciones y potencia el futuro tecnólogico de la empresa.</li>
 
 	 </ul>
+
 	 </div>
+
 	<div class="contenedor3">
 			<div class="parte1">
 				<div class="central">
@@ -187,8 +196,8 @@
 				</ul>
 
 			</div>
-			<div class="fotoproducto animatedParent" style="width:40%" >
-				<img class='animated bounceInRight'  data-id='4'  src="css/images/producto.png" alt="Producto foto">
+			<div class="fotoproducto "  >
+				<img   src="css/images/producto.png" alt="Producto foto">
 			</div>
 	</div>
 			<div class="flecha">
@@ -203,6 +212,7 @@
 					</div>
 				</div>
 			</div>
+
 	<div class="contenedor4 animatedParent">
 		<div>
 			<img class='animated rotateIn' data-id='6'   src="css/images/foto2.png" alt="foto1">
